# karma

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt
app/scripts/: stramaKarmaOPC.xml
src/: CMakeLists.txt
src/karmaOPC/: CMakeLists.txt  iol-memory.ini  main.cpp
